GT-91 Fixed spacing issues garden edit page

--- a/GreenTeam/wwwroot/css/site.css
+++ b/GreenTeam/wwwroot/css/site.css
@@ -105,7 +105,7 @@ main {
 }
 
 /*Background of content*/
-.container, .img-container {
+.container {
     min-width: 500px;
     max-width: 960px;
     width: max-content;
@@ -275,7 +275,13 @@ img {
     border: 5px solid #D9B7B4;
 }
 
-
+.img-container {
+    min-width: 350px;
+    max-width: 960px;
+    width: auto;
+    text-align: center;
+    position: relative;
+}
 
 .img-container:hover .img-edit-textbox {    
     transition: .5s;
